Drupal 8.0.0, 2015-11-19
------------------------
- Significantly improved the front end:
    * Made all built-in themes responsive.
    * Added support for responsive images.
    * Made built-in tables responsive with three levels of column importance.
    * Added Twig as the default template engine and converted all .tpl.php
      templates and theme functions to .html.twig.
    * Removed the PHPTemplate engine.
    * Several large scale cleanups of the markup produced by Drupal.
    * Added Classy as a base theme to maintain CSS classes and wrappers.
    * Added Stable as the default base theme to maintain backwards compatibility
      for core template and CSS changes, because templates and CSS outside
      Stable can be improved in minor releases (8.1.0, 8.2.0, etc.).
    * Redesigned several key elements of the Seven theme.
    * Added support for HTML5 elements.
    * Included Backbone.js and Underscore.js JavaScript frameworks.
    * Updated to jQuery 2.1.4.
    * Updated to jQuery UI 1.11.4.
    * Removed jquery.bbq.
    * Removed the Garland theme from core.
    * Removed the Overlay module from core and replaced it with a simple,
      dynamic "Back to site" link.
    * Improved the asset library system to manage CSS and JavaScript files and
      their dependencies. Allowing for smaller AJAX request payloads.
    * jQuery is no longer loaded on all pages, only when another asset needs it.
    * No JavaScript is loaded at all for anonymous users by default, for faster
      page loads.
    * Implemented SMACSS-style categorization for CSS files.
    * Removed most support for Internet Explorer 8 and below.
    * Added Modernizr for making styling changes based on browser support.
    * All page template variables converted to blocks (title, breadcrumb,
      branding, etc).
    * Added the Breakpoint module to manage breakpoints of responsive designs.
    * Introduced native Schema.org output in pages.